# F1Game

./: .gitignore  CLAUDE.md  CMakeLists.txt  vcpkg.json
assets/F1_car/C44/: seperated_c44.mtl  seperated_right_break.mtl
assets/circuit/: VirusTotal - File - 2de70ca737c1f4602517c555ddd54165432cf231ffc0e21fb2e23b9dd14e7fb4.html
assets/circuit/VirusTotal - File - 2de70ca737c1f4602517c555ddd54165432cf231ffc0e21fb2e23b9dd14e7fb4_files/: anchor.html  css  enterprise.js.下载  gtm.js.下载  js  main.191e857035303a686dee.js.下载  qrcode.min.js.下载  recaptcha__zh_cn.js.下载
assets/shaders/: carShader.frag  carShader.vert  dashBoard.vert
exp/: mean.py
include/: audio.h  car.h  circuit.h  dashboard.h  front.h  shader.h  utils.h  wheel.h
src/: audio.cpp  car.cpp  circuit.cpp  dashboard.cpp  front.cpp  main.cpp  shader.cpp  utils.cpp  wheel.cpp
